Bugs fixed, new functionalities (see description)
Box type showed in "content" box
Votes visualized near vote buttons
Nickname box under reply box
No more than one vote per node allowed
No empty replies allowed
Added date in milliseconds to new nodes and links
Hided nodes not responsive to mouse events

--- a/zoomout.css
+++ b/zoomout.css
@@ -29,18 +29,18 @@ body {
 
 .areacontent {
   width: 98%;
-  min-height: 70px;
+  min-height: 120px;
 }
 
 .areareply {
   border: yes;
   width: 98%;
-  min-height: 60px;
+  min-height: 90px;
 }
 
 .areaname {
   border: yes;
-  width: 40%;
+  width: 30%;
   height: 17px;
 }
 
@@ -141,17 +141,6 @@ body {
 }
 
 
-div.new{
-	width: 160px;
-	height: 40px;
-	-moz-border-radius: 3px;
-	border-radius: 3px;
-	background: #99f;
-	text-align: center;
-	vertical-Align: center;
-	margin: 5px;
-}
-
 div.save{
     display:inline-block;
 	width: 80px;
@@ -164,14 +153,29 @@ div.save{
 }
 
 div.showreplypanel{
-	width: 160px;
+	display: inline-block;
+	width: 100px;
 	height: 40px;
 	-moz-border-radius: 3px;
 	border-radius: 3px;
 	background: #396;
 	text-align: center;
-	vertical-Align: center;
 	margin: 5px;
+	line-height:40px;
+	font-size: 14pt;
+}
+
+div.showconnectpanel{
+	display: inline-block;
+	width: 100px;
+	height: 40px;
+	-moz-border-radius: 3px;
+	border-radius: 3px;
+	background: #99f;
+	text-align: center;
+	margin: 5px;
+	line-height:40px;
+	font-size: 14pt;
 }
 
 div.filt_hide_button{
@@ -203,20 +207,39 @@ div.evalpos{
 	border-radius: 3px;
 	background: #3c3;
 	text-align: center;
-	margin: 5px;
+	margin: 4px;
 }
 
 div.evalneg{
-        display:inline-block;
+    display:inline-block;
 	width: 30px;
 	height: 20px;
 	-moz-border-radius: 3px;
 	border-radius: 3px;
 	background: #f63;
 	text-align: center;
-	margin: 5px;
+	margin: 4px;
 }
 
+div.posvotes{
+    display:inline-block;
+	width: 30px;
+	height: 20px;
+	-moz-border-radius: 3px;
+	border-radius: 3px;
+	background: #fff;
+	text-align: left;
+}
+
+div.negvotes{
+    display:inline-block;
+	width: 30px;
+	height: 20px;
+	-moz-border-radius: 3px;
+	border-radius: 3px;
+	background: #fff;
+	text-align: left;
+}
 
 #svg {
   position: absolute;
@@ -228,7 +251,7 @@ div.evalneg{
 
 #right_bar {
   position: relative;
-  top: 0px;
+  top: 1px;
   margin-left: 70%;
 }
 
